--- a/css/nano.css
+++ b/css/nano.css
@@ -16,7 +16,7 @@ body, html{
     padding: 2vh 10vw;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
     body, html {
       background: #366278;
     }
@@ -45,7 +45,7 @@ header h4 {
     font-style: italic;
   }
 
-  @media screen and (max-width: 992px) {
+  @media screen and (max-width: 991px) {
     header {
       color: white;
     }
@@ -79,7 +79,7 @@ nav a {
     color: #ffffff;
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 767px) {
     nav {
       height: 100%;
     }
@@ -159,7 +159,7 @@ article {
     display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     table {
       display: none;
     }
@@ -191,7 +191,7 @@ footer p, footer a {
     text-decoration: none;
   }
 
-  @media screen and (max-width: 992px) {
+  @media screen and (max-width: 991px) {
     footer{
       background: #366278;
     }
